# unit_test_coverage

./: .gitignore  CMakeLists.txt
include/unit_test_coverage/: foo.h
src/: CMakeLists.txt  foo.cpp  foo.h
src/test/: unit_test.cpp
test/: CMakeLists.txt  unit_test.cpp
